--- a/SpaceInvaders3DCG/SpaceInvaders3DCG/SpaceInvaders3DCG.vcxproj
+++ b/SpaceInvaders3DCG/SpaceInvaders3DCG/SpaceInvaders3DCG.vcxproj
@@ -110,12 +110,25 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="alien.h" />
+    <ClInclude Include="bala.h" />
+    <ClInclude Include="escreve.h" />
+    <ClInclude Include="fundo.h" />
+    <ClInclude Include="nave.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Source.h" />
+    <ClInclude Include="stdafx.h" />
+    <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="alien.cpp" />
+    <ClCompile Include="bala.cpp" />
+    <ClCompile Include="escreve.cpp" />
+    <ClCompile Include="fundo.cpp" />
+    <ClCompile Include="nave.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
